# hyprlua

./: .gitignore  .gitmodules  .luacheckrc  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  Makefile  README.md  config.ld  example-hyprland.conf  hyprland.conf  hyprland.lua  hyprlua-0.0-1.rockspec  hyprlua-0.0-2.rockspec  hyprlua-0.1-2.rockspec  hyprlua-0.1-3.rockspec  hyprlua.rockspec
.github/workflows/: documentation.yaml
docs/: CNAME  index.html
docs/examples/: hyprland.lua.html
docs/modules/: binds.html  decoration.html  general.html  hyprlua.html  logs.html  modules.decoration.html  monitors.html  utils.html
examples/: hyprland.conf  hyprland.lua
runtime/: hyprlua.lua
runtime/common/: logs.lua  utils.lua
runtime/libs/: logs.lua
runtime/modules/: binds.lua  decoration.lua  general.lua  monitors.lua
runtime/tests/: test_monitors.lua
src/: config.ld  globals.cpp  globals.hpp  hyprlua.lua  logger.hpp  main.cpp  socket.cpp  utils.cpp  utils.hpp  watcher.cpp  watcher.hpp
src/libs/: logs.lua  utils.lua
src/lua/: monitors.cpp  monitors.hpp  runtime.cpp  runtime.hpp
src/modules/: binds.lua  decoration.lua  general.lua  monitors.lua
tests/: run_all_tests.lua  test_monitors.lua
